--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -23,3 +23,16 @@ input[type=text], select, textarea {
     background-color: #45a049;
   }
   
+
+.contactSubmitBtnInput{
+  border: 1px solid rgb(255, 255, 255) !important;
+}
+
+.contactSubmitBtnInput:hover{
+  background-color: rgb(207, 13, 13) !important;
+
+}
+
+option[value]:hover{
+  background-color:rgb(207, 13, 13) 
+}
