--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,351 @@
 .white-content {
     background: #616161;
   }
+
+body{
+  overflow-x: hidden;
+}
+
+
+
+/* Contact Page */
+
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+
+.contactSubmitBtnInput{
+border: 1px solid rgb(255, 255, 255) !important;
+}
+
+.contactSubmitBtnInput:hover{
+background-color: rgb(207, 13, 13) !important;
+
+}
+
+option[value]:hover{
+background-color:rgb(207, 13, 13) 
+}
+
+/* Components style */
+
+.navbar-nav .nav-link.active:hover, .navbar-nav .show>.nav-link {
+  color: rgb(207, 13, 13);
+}
+
+.myAmin {
+  color: rgb(207, 13, 13);
+  animation-name: animData;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+
+}
+
+@keyframes animData {
+  0% {
+    color: hsl(0, 88%, 43%);
+  }
+
+  25% {
+    color: hsl(60, 100%, 50%);
+  }
+
+  50% {
+    color: hsl(240, 100%, 50%);
+  }
+
+  100% {
+    color: hsl(120, 100%, 25%);
+  }
+}
+
+
+ul {
+  list-style: none;
+}
+
+ul>li>a {
+  color: grey;
+  text-decoration: none;
+  line-height: 1.8;
+}
+
+ul>li>a:hover,
+a:hover {
+  color: hsl(0, 88%, 43%);
+  /* font-weight: 500; */
+}
+
+.col-heading {
+  display: block;
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #304f50;
+  font-weight: 500;
+  margin: 1rem 0;
+  padding: .4rem 0px;
+  border-bottom: 1px solid #c7c7c7;
+  letter-spacing: 3px;
+}
+
+.fa {
+  color: #304f50;
+  margin-right: 10px;
+  font-size: 18px;
+  width: 2.25rem;
+}
+
+#to-top {
+  display: none;
+  position: fixed;
+  bottom: 40px;
+  right: 20px;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #304f50;
+  color: white;
+  padding: 15px;
+  border-radius: 14px;
+  cursor: pointer;
+  z-index: 99;
+}
+
+#to-top:hover {
+  background-color: #555;
+}
+
+#bottom-footer {
+  background-color: cadetblue;
+  color: white;
+  margin-top: 2rem;
+  padding-top: .3rem;
+}
+
+.vertical-links>li {
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+
+.vertical-links>li>a {
+  color: white;
+  font-weight: 400;
+  margin-left: 1rem;
+  list-style-type: square;
+}
+
+
+.heroType {
+  background-color: hsl(0, 88%, 43%);
+  ;
+  padding: 5px;
+  border-radius: 5px;
+  border-color: white;
+}
+
+.nav-link:hover {
+  background-color: hsl(0, 88%, 43%);
+  border-radius: 5px;
+  transition: ease-in-out 0.4s;
+  color: white !important;
+}
+
+.nav-link {
+  border-radius: 5px;
+  border-color: white;
+  transition: ease-in-out 0.4s;
+  padding: 5px 5px;
+  margin-top: 7px;
+}
+
+
+/* text zoom in zoom out */
+.zoom-in-out-box {
+  /* margin: 24px;
+  width: 50px;
+  height: 50px; */
+  /* background: #f50057; */
+  animation: zoom-in-zoom-out 3s ease infinite;
+}
+
+@keyframes zoom-in-zoom-out {
+  0% {
+    transform: scale(1, 1);
+  }
+
+  50% {
+    transform: scale(1.1, 1.1);
+  }
+
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
+
+
+/* scrolling at bottom like credit or news */
+
+#scroll-container {
+  border: 3px solid black;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+#scroll-text {
+  /* animation properties */
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+
+  -moz-animation: my-animation 15s linear infinite;
+  -webkit-animation: my-animation 15s linear infinite;
+  animation: my-animation 15s linear infinite;
+}
+
+/* for Firefox */
+/* @-moz-keyframes my-animation {
+  from {
+    -moz-transform: translateX(100%);
+  }
+
+  to {
+    -moz-transform: translateX(-100%);
+  }
+} */
+
+/* for Chrome */
+@-webkit-keyframes my-animation {
+  from {
+    -webkit-transform: translateX(100%);
+  }
+
+  to {
+    -webkit-transform: translateX(-100%);
+  }
+}
+
+@keyframes my-animation {
+  from {
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+
+  to {
+    -moz-transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+}
+
+.footerSocialIconHover:hover{
+background-color: hsl(0, 88%, 43%);
+color: white;
+}
+
+.footerSubBtnHover:hover{
+  background-color: #ce0d0d;
+  color: white !important;
+
+}
+
+.creditText:hover{
+  color: #ce0d0d;
+}
+
+.pageText{
+  background-color: #ce0d0d;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+  border: 1px solid white;
+}
+
+
+.fetchDataBoxTrans{
+  transition: all 0.3s;
+}
+
+.heroDesc{
+  padding: 10px 0;
+}
+
+
+.postHeadStyle{
+  background-color: #ce0d0d;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.postViewMoreStyle{
+  text-decoration: none;
+  color: #ce0d0d;
+  font-weight: bolder;
+  padding: 5px;
+  border: 1px solid silver;
+  border-radius: 5px;
+  margin-top: 30px;
+
+  
+}
+
+.postViewMoreStyle:hover{
+  background-color: #ce0d0d;
+  color: white;
+  /* padding: px; */
+  transition: all 0.4s;
+  border-radius: 5px;
+}
+
+
+.topListItem {
+  width: 85px;
+  border: 1px solid white;
+  margin: 10px 5px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  
+
+}
+.topListItem a{
+  color: white;
+  padding: 5px;
+  width: 100px;
+}
+
+.topListItem a:hover{
+  background-color: #ce0d0d;
+  color: white;
+  transition: all 0.3s;
+}
+
+.topListItem:hover{
+  background-color: #ce0d0d;
+  color: white;
+  transition: all 0.3s;
+}
